Correction error de contraste on link's NavBar/ add attribut alt on image's Location / change attribut lang='en' by lang'fr'

--- a/kaza/src/styles/_variables.scss
+++ b/kaza/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-$primary-color: #ff6060;
+$primary-color: #d73c3c;
 $secondary-color: #f6f6f6;
 $white-color: #ffffff;
 $black-color: #000000;
